--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.1.3",
     "react-redux": "^8.0.4",
     "@reduxjs/toolkit": "^1.8.6",
-    "react-hook-form": "^7.37.0"
+    "react-hook-form": "^7.37.0",
+    "react-router-dom": "^6.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
