--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^8.0.4",
     "@reduxjs/toolkit": "^1.8.6",
     "react-hook-form": "^7.37.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "history": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
